Fix boundsOnElement() for text nodes having transformations

Text layout calculations are done with a local scaling, and that was
mixed up with the node transformation when computing the bounds.

Fixes: QTBUG-98139
Pick-to: 6.2
Change-Id: Id3ab0500cfba4578989b5766677a53340e8cecde
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>